--- a/css/style.css
+++ b/css/style.css
@@ -1,89 +1,127 @@
 html {
-  box-sizing: border-box;
-  font-size: 10px;
-  background: url('https://i.picsum.photos/id/110/5616/3744.jpg') no-repeat center;
-  background-size: cover;
+    box-sizing: border-box;
+    font-size: 10px;
+    background: url('https://i.picsum.photos/id/110/5616/3744.jpg') no-repeat center;
+    background-size: cover;
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;    
 }
 
 body {
-  margin: 0;
-  text-align: center;
-  font-family: 'Roboto Mono', monospace;
+    margin: 0;
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
 }
 
 .timer {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 .controls {
-  display: flex;
+    display: flex;  
 }
 
 .controls > * {
-  flex: 1;
+    flex: 1;
 }
 
 #custom {
-  flex: 1;
-  display: flex;
+    flex: 1;
+    display: flex;
 }
 
 #custom input {
-  flex: 1;
-  border: 0;
-  padding: 1rem;
-  background-color: lightgray;
-  border-bottom: 3px solid rgba(48, 47, 47, 0.808);
+    flex: 1;
+    border: 0;
+    padding: 1rem;
+    background-color: lightgray;
+    border-bottom: 3px solid rgba(48, 47, 47, 0.808);
 }
 
+input,
 #custom input::placeholder {
-  font-size: large;
+    font-size: 2rem;    
 }
 
 .button {
-  background: none;
-  border: 0;
-  cursor: pointer;
-  color: white;
-  font-size: 2rem;
-  text-transform: uppercase;
-  background: rgba(0,0,0,0.1);
-  border-bottom: 3px solid rgba(0,0,0,0.2);
-  border-right: 1px solid rgba(0,0,0,0.2);
-  padding: 1rem;
-  font-family: 'Roboto Mono', monospace;
+    background: none;
+    border: 0;
+    cursor: pointer;
+    color: white;
+    font-size: 2rem;
+    text-transform: uppercase;
+    background: rgba(0,0,0,0.1);
+    border-bottom: 3px solid rgba(0,0,0,0.2);
+    border-right: 1px solid rgba(0,0,0,0.2);
+    padding: 1rem;
+    font-family: 'Roboto Mono', monospace;
 }
 
 .button:hover,
 .button:focus {
-  font-weight: bold;
-  color: black;
-  background: rgba(0,0,0,0.2);
-  outline: 0;
+    font-weight: bold;
+    color: black;
+    background: rgba(0,0,0,0.2);
+    outline: 0;
 }
 
 .display {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
 }
 
 .time-left {
-  font-weight: 100;
-  font-size: 20rem;
-  margin: 0;
-  text-shadow: 4px 4px 0 rgba(0,0,0,0.05);
+    font-weight: 100;
+    font-size: 20rem;
+    margin: 0;
+    text-shadow: 4px 4px 0 rgba(0,0,0,0.05);
 }
 
 .end-time {
-  font-size: 4rem;
+    font-size: 4rem;
 }
+
+#btns {
+    display: flex;
+    width: 600px;
+    justify-content: space-around;
+    padding: 100px 20px 0px 20px;
+}
+
+#btns > span > * {
+    width: 200px;
+    height: 50px;
+}
+
+.pause,
+.stop {
+    /* background: none; */
+    border: 0;
+    border-radius:8px;
+    cursor: pointer;
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: rgba(30, 30, 30, 0.7);
+    border-bottom: 3px solid rgba(0,0,0,0.2);
+    border-right: 1px solid rgba(0,0,0,0.2);
+    padding: 1rem;
+    font-family: 'Roboto Mono', monospace;
+}
+.pause:hover,
+.stop:hover {
+    font-weight: bold;
+    color: white;
+    background: rgba(0,0,0,0.75);
+    outline: 0;
+}
+
