--- a/css/style.css
+++ b/css/style.css
@@ -89,36 +89,26 @@ input,
     font-size: 4rem;
 }
 
-#btns {
-    display: flex;
-    width: 600px;
-    justify-content: space-around;
-    padding: 100px 20px 0px 20px;
+#btn {
+    padding-top: 1.5%;
 }
 
-#btns > span > * {
-    width: 200px;
-    height: 50px;
-}
-
-.pause,
-.stop {
-    /* background: none; */
+.pause {
     border: 0;
+    width: 150px;
     border-radius:8px;
     cursor: pointer;
     color: white;
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-weight: bold;
     text-transform: uppercase;
     background: rgba(30, 30, 30, 0.7);
     border-bottom: 3px solid rgba(0,0,0,0.2);
     border-right: 1px solid rgba(0,0,0,0.2);
-    padding: 1rem;
+    padding: 1.5rem;
     font-family: 'Roboto Mono', monospace;
 }
-.pause:hover,
-.stop:hover {
+.pause:hover {
     font-weight: bold;
     color: white;
     background: rgba(0,0,0,0.75);
